package team5.studentactions;

import team5.Student;

public interface StudentAction {
	void run(Student student);
}
