@startuml
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam shadowing false

skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #0D47A1
    FontColor #0D47A1
    BorderThickness 2
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #FBC02D
    FontColor #5D4037
    BorderThickness 1
}

title <size:20><b>OCP Implementation</b></size>

' ===========================
' SECTION 1 – ACTION INTERFACE
' ===========================
interface StudentAction <<interface>> {
    + run(student : Student) : void
}

class ViewInternshipsAction {
    + run(student : Student) : void
}

class CheckApplicationStatusAction {
    + run(student : Student) : void
}

StudentAction <|.. ViewInternshipsAction
StudentAction <|.. CheckApplicationStatusAction

note right of StudentAction
    <b>Actual Code</b>
    public interface StudentAction {
        void run(Student student);
    }
end note

' ===========================
' SECTION 2 – USER CONTROLLERS
' ===========================
abstract class UserController {
    + showMenu() : void
    + verifyUserFromList(userType : UserType, userID : String, password : String) : User <<static>>
}

class CompanyRepController
class CareerCenterStaffController

UserController <|-- CompanyRepController
UserController <|-- CareerCenterStaffController

note right of UserController
    <b>OCP In Action</b>
    Add AdminController
    → No changes to UserController
end note

' ===========================
' SECTION 3 – STUDENT CONTROLLER
' ===========================
class StudentController {
    - viewInternshipsAction : StudentAction
    - checkApplicationStatusAction : StudentAction
    --
    + showMenu() : void
}

note bottom of StudentController
    <b>OCP In Action</b>
    • Controller depends on abstraction
    • New functionality = new class
    • No need to alter showMenu() logic
end note


' ===========================
' RELATIONSHIPS
' ===========================
' StudentController depends on the StudentAction interface
StudentController o-- StudentAction

' StudentController is a type of UserController
UserController <|-- StudentController
@enduml